<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/fragment_container"
            android:paddingBottom="5dp">
        </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="125dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/divider"
            android:id="@+id/save_grid_layout"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_file_name"
                android:textAlignment="center"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_grid_edit_text"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_game"
                    android:id="@+id/save_button"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cancel_save"
                    android:text="@string/cancel_text"/>
            </LinearLayout>
                android:text="@string/cancel_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="125dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/divider"
            android:id="@+id/load_grid_layout"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/load_file_name"
                android:textAlignment="center"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/load_grid_edit_text"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/load_game"
                    android:id="@+id/load_button"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cancel_load"
                    android:text="@string/cancel_text"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Settings"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_game"
                android:text="@string/start_animation"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/clear_grid"
                android:text="@string/clear_grid"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reset_grid"
                android:text="@string/reset_grid"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timing_text"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/animation_timing"
                android:text="0.5"
                android:digits="0123456789."/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_seconds"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"/>
            <SeekBar
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/red_bar"
                android:max="255"
                android:progress="0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green"/>
            <SeekBar
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/green_bar"
                android:max="255"
                android:progress="0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue"/>
            <SeekBar
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/blue_bar"
                android:max="255"
                android:progress="0"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>